--- a/src/style/menu_sip.css
+++ b/src/style/menu_sip.css
@@ -28,7 +28,14 @@ body * {
     }
     .sip-title {
         text-align: center;
+        font-size: 40px;
         width: 400px;
+    }
+    .sip-price {
+        text-align: center;
+        font-size: 30px;
+        width: 400px;
+        color: #ff5d5d;
     }
     .sip-img {
         width: 400px;
